[package]
name = "mtu"
version = "0.0.3"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/rmw-lib/mtu"
readme = "README.md"
description = "cache file open handle"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
err = { version = "0.0.5", package = "rmw_err" }

[target.'cfg(target_os = "windows")'.dependencies]
winping = "0.10.1"

[target.'cfg(not(target_os = "windows"))'.dependencies]
dashmap = "5.3.4"
pnet_packet = "0.31.0"
socket2 = "0.4.4"
parking_lot = "0.12.1"

[dev-dependencies]
anyhow = "1.0.58"
